# vl-finetuning

./: .gitignore  README.md  classifier.py  completions.json  create_seeclick_hf.py  extract_frames.py  finetune_gemma.py  finetune_qwen.py  finetune_yolo.py  images.py  inference.py  inference_yolo.py  kimi_server.py  label_gemini.py  label_guiworld.py  label_seeclick_yolo.py  layers.txt  make_seeclick_10k_filtered.py  molmo_server.py  package-lock.json  package.json  plot_metrics.py  pyproject.toml  relabel-seeclick-gemini.py  relabel_seeclick.py  scrape-calendars-2.js  scrape-calendars.js  siglip_embedding.py  test_kimi_server.py  train_classifier.py  translate_guiworld.py
src/vl_utils/: __init__.py  bbox.py  claude.py  common.py  data-old.py  data-oldish.py  data.py  data_old.py  draw.py  evaluate.py  evaluate_api.py  loss.py  pil.py  processor.py  spatial.py  vips.py
