[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "vl-utils"
version = "0.0.21"
authors = [{ name = "Benjamin Anderson", email = "andersonbcdefg@gmail.com" }]
description = "training vision language models"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = { text = "" }
classifiers = []
dependencies = [
    "qwen-vl-utils"
]
